--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
 </head>
 <body class="open-sans-normal">
     <header>
-        <section class="banner">
-           <div class="banner-title">
-            <div class="banner-text">
-                Bangladesh 2.0
-            </div>
-            <div class="title">
-                Idea, innovation , vision and challenges in new Bangladesh. 
-                <button class="dark-green-btn">Explore new Bangladesh</button>
-            </div>
+        <section>
+           <div class="banner">
+            <div class="banner-title">
+                <div class="banner-text">
+                    Bangladesh 2.0
+                </div>
+                <div class="title">
+                    Idea, innovation , vision and challenges in new Bangladesh. 
+                    <button class="dark-green-btn">Explore new Bangladesh</button>
+                </div>
+               </div>
+                <figure class="banner-img">
+                    <img src="assets/hero.png" alt="">
+                </figure>
            </div>
-            <figure class="banner-img">
-                <img src="assets/hero.png" alt="">
-            </figure>
         </section>
     </header>
     <main>
@@ -47,17 +49,17 @@
                          <button class="blue-btn">Learn More</button>
                      </div>
                  </div>
-                 <div class="card" id="second card">
+                 <div class="card" id="second-card">
                      <div class="card-img">
                          <img src="assets/card-icon.png" alt="">
                      </div>
                      <div class="card-title">
                          <h4>Green Energy</h4>
-                         <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                         <p id="card-p">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                          <button class="green-btn">Learn More</button>
                      </div>
                  </div>
-                 <div class="card">
+                 <div class="card" id="third-card">
                      <div class="card-img">
                          <img src="assets/card-icon.png" alt="">
                      </div>
@@ -70,8 +72,8 @@
              </div>
          </section>
 
-        <!------------- Recent-News -------------->
-        <section>
+        <!------------- Recent News -------------->
+        <section class="recent-news">
             <div class="section-title">
                 <h2>
                     Recent News
@@ -91,7 +93,7 @@
                         <button class="dark-green-btn">Read more</button>
                     </div>
                 </div>
-                <div class="sat-card-1">
+                <div class="sat-card-2">
                     <div class="satellite-info">
                         <h3>Bangladesh Launches New Satelite</h3>
                         <img src="assets/al-jazeera.png" alt=""><br>
@@ -107,6 +109,46 @@
         </section>
 
         <!------------- Donate Today ----------->
+        <section>
+            <div class="donation">
+                <div class="section-title">
+                    <h2 class="donation-title">Donation Today</h2>
+                    <p class="donation-text">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital information, and robust infrastructure. the country is set to become a global model of development.</p>
+                </div>
+            
+            <div class="box">
+                <h2>100 Taka</h2>
+                <h2 class="blue-card">200 Taka</h2>
+                <h2>500 Taka</h2>
+                <h2>1000 Taka</h2>
+            </div>
+            <div class="other-amount">
+                <input type="text" placeholder="Other Amount (Taka)">
+            </div>
+            <div>
+                <button type="submit" class="dark-green-btn" >Done Now</button>
+            </div>
+        </div>
+        </section>
+
+        <!------------- Subscribe Newsletter --------->
+        <section class="Subscribe">
+            <div class="section-title">
+                <h2 class="subscribe-title">Subscribe Newsletter</h2>
+                <p class="subscribe-text">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital information, and robust infrastructure. the country is set to become a global model of development.</p>
+            </div>
+            <div class="subscription-area">
+               <div class="input-area">
+                <input type="text" name="" placeholder="Enter your email here" id="">
+               </div>
+               <div class="subscribe-btn">
+                <button class="dark-green-btn">Subscribe</button>
+               </div>
+            </div>
+            <div>
+                <p>We promise not to spam you</p>
+            </div>
+        </section>    
     </main>
 </body>
 </html>
