--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                  </div>
              </div>
          </section>
+         <!-------------- Quote ------------>
+         <section class="quote-section">
+            <h3>Quote of the Year</h3>
+         <div class="quote">
+            <p>I congratulate the brave students who took the lead in making our Second Victory Day possible and to the people for giving your total support to them. Let us make the best use of our new victory.  Let us not let this slip away because of our mistakes. I fervently appeal to everybody to stay calm. Please refrain from all kinds of violence. I appeal to all students, members of all political parties and non-political people to stay calm.  This is our beautiful country with lots of exciting possibilities. We must protect and make it a wonderful country for us and for our future generations.Our youth is ready to give this leadership in creating a new world. Let us not miss the chance by going into any senseless violence.  Violence is our enemy.  Please don’t create more enemies. Be calm and get ready to build the country.If we take the path of violence everything will be destroyed. Please stay calm. Help those around you to stay calm. 
+            <div class="">
+                Dr. Muhammad Yunus <br>
+                Chief Adviser of the People's Republic of Bangladesh
+                 </p>
+            </div>
+         </div>
+         </section>
 
         <!------------- Recent News -------------->
         <section class="recent-news">
