--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 <link rel="stylesheet" href="styles/style.css">
     <title>B1A11</title>
+    <style>
+        *{
+            margin: 0 auto;
+        }
+        main{
+            padding-bottom: 30px;
+            background-color: rgb(235, 234, 234);
+        }
+    </style>
 </head>
 <body class="open-sans-normal">
     <header>
@@ -45,7 +54,7 @@
                      </div>
                      <div class="card-title">
                          <h4>Digital Transformation</h4>
-                         <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens</p>
+                         <p>Creating a nationwide digital ecosystem to enhance connectivity. </p>
                          <button class="blue-btn">Learn More</button>
                      </div>
                  </div>
@@ -65,7 +74,7 @@
                      </div>
                      <div class="card-title">
                          <h4>Modern Infrastructure</h4>
-                         <p>Building a state of the art infrastructure to support economics growth and global competitiveness.</p>
+                         <p>Building a state of the art infrastructure to support economics growth.</p>
                          <button class="yellow-btn">Learn More</button>
                      </div>
                  </div>
@@ -75,10 +84,10 @@
          <section class="quote-section">
             <h3>Quote of the Year</h3>
          <div class="quote">
-            <p>I congratulate the brave students who took the lead in making our Second Victory Day possible and to the people for giving your total support to them. Let us make the best use of our new victory.  Let us not let this slip away because of our mistakes. I fervently appeal to everybody to stay calm. Please refrain from all kinds of violence. I appeal to all students, members of all political parties and non-political people to stay calm.  This is our beautiful country with lots of exciting possibilities. We must protect and make it a wonderful country for us and for our future generations.Our youth is ready to give this leadership in creating a new world. Let us not miss the chance by going into any senseless violence.  Violence is our enemy.  Please don’t create more enemies. Be calm and get ready to build the country.If we take the path of violence everything will be destroyed. Please stay calm. Help those around you to stay calm. 
+            <p>"I congratulate the brave students who took the lead in making our Second Victory Day possible and to the people for giving your total support to them. Let us make the best use of our new victory.  Let us not let this slip away because of our mistakes. I fervently appeal to everybody to stay calm. Please refrain from all kinds of violence. I appeal to all students, members of all political parties and non-political people to stay calm.  This is our beautiful country with lots of exciting possibilities. We must protect and make it a wonderful country for us and for our future generations.Our youth is ready to give this leadership in creating a new world. Let us not miss the chance by going into any senseless violence.  Violence is our enemy.  Please don’t create more enemies. Be calm and get ready to build the country.If we take the path of violence everything will be destroyed. Please stay calm. Help those around you to stay calm. 
             <div class="">
-                Dr. Muhammad Yunus <br>
-                Chief Adviser of the People's Republic of Bangladesh
+                <strong>Dr. Muhammad Yunus</strong> <br>
+                <span style="color: rgb(105, 105, 105); font-size: 12px;">Chief Adviser of the People's Republic of Bangladesh</span>
                  </p>
             </div>
          </div>
@@ -162,5 +171,19 @@
             </div>
         </section>    
     </main>
+    <footer>
+        <footer>
+            <div class="footer-section">
+                <h2>Bangladesh 2.0</h2>
+                <hr>
+                <div class="social-icons">
+                  <a href="#" class="facebook"><img src="assets/facebook.png" alt=""></a>
+                  <a href="#" class="instagram"><img src="assets/instagram.png" alt=""></a>
+                  <a href="#" class="x"><img src="assets/x.png" alt=""></a>
+                </div>
+              </div>
+        </footer>
+    
+    </footer>
 </body>
 </html>
